# lexi

./: .gitignore  I18N_ASYNC_SETUP_CHANGES.md  I18N_DATABASE_MIGRATION.md  I18N_USAGE.md  PRD.md  alembic.ini  config.yaml  env.example  lexi.code-workspace  pyproject.toml  requirements.txt  run_i18n_tests.py  test_language_selection.py
.cursor/rules/: aiogram.mdc  typing.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  init-db.sql
alembic/: env.py  script.py.mako
alembic/versions/: 2025_08_01_1747-1c444ce35e6c_init.py  2025_08_01_1812-4886e5237828_add_language_table.py  2025_08_02_0958-96579fcb9301_create_user.py  2025_08_02_1024-1689c313cf6c_create_user.py  2025_08_02_1413-d05d790841dc_phrase_translations_in_db.py  2025_08_02_1444-7061ba58db1e_story_creator_as_separate_feature.py  2025_08_02_1500-populate_phrase_translations.py  2025_08_03_1614-0ef9265bc40c_add_last_story_language_code.py  2025_08_03_2221-f11c6eaabcd2_rename_last_story_language_code_to_.py
app/: bot.py  config.py  database.py  main.py  models.py  prompts.py  settings.py
app/adapters/: in_memory_cache.py
app/domain/: i18n.py
app/factory/: __init__.py  redis.py  services.py  session_pool.py
app/ports/: cache.py
app/runners/: app.py  polling.py
app/service/: language.py
app/services/: story_creator.py  story_teller.py
app/telegram/: bot.py  i18n.py  middlewares.py
app/utils/: language.py  logging.py
app_old/: __init__.py  database.py  routes.py  settings.py
app_old/adapters/: redis_cache.py
app_old/telegram/: i18n.py
assets/: commands.yml
bot_server/: .flake8  Dockerfile  alembic.ini  entrypoint.sh
bot_server/alembic/: env.py
bot_server/lexi/: const.py  main.py
bot_server/tests/: test_db_loading.py  test_i18n.py
deployment/: Dockerfile  docker-compose.yaml  entrypoint.sh
diagrams/as_is/: Container.puml  Context.puml
diagrams/to_be/: Container.puml  Context.puml
event_stream_processor/: .gitkeep
lexi/: prompts.py
lexi/errors/: bot.py
lexi/factory/: __init__.py  services.py  session_pool.py
lexi/runners/: polling.py
lexi/utils/: time.py
story_teller/: STORY_CREATION_IMPLEMENTATION.md
tests/: test_error_logger.py  test_i18n_middleware.py  test_language_selection.py  test_story_creator.py
web_server/: .dockerignore  .gitignore  pyproject.toml
(+167 files in other folders)
