[tool.poetry]
name = "lexi"
version = "1.0.0"
description = "AI-Powered Language Adventure Bot for teaching kids foreign languages"
authors = ["Denis Sleptsov <hurrdurrrderp@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
aiogram = "^3.2.0"
asyncpg = "^0.30.0"
sqlmodel = "^0.0.24"
celery = "^5.3.4"
redis = "^6.0.0"
httpx = "^0.28.1"
thefuzz = "^0.22.1"
python-levenshtein = "^0.27.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
openai = "^1.3.7"
loguru = "^0.7.3"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pylint = "^3.3.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
mypy = "^1.7.1"
types-redis = "^4.6.0.10"
pylint-pydantic = "^0.3.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.pylint.master]
ignore = ["alembic/versions"]
